# InfluenceTrader

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  API.md  Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml
docs/: API_ENDPOINTS.md
src/influence_trader/: main.py
src/influence_trader/api/: __init__.py  routes.py
src/influence_trader/core/: __init__.py  config.py
src/influence_trader/domain/: __init__.py  models.py
src/influence_trader/llm/: __init__.py  client.py  eval_runner.py  evals.py  prompt_loader.py  prompts.py
src/influence_trader/llm/prompt_assets/: README.md
src/influence_trader/llm/prompt_assets/market_impact/v1/: metadata.json  system.md  user.md
src/influence_trader/llm/prompt_assets/semantic_relevance/v1/: metadata.json  system.md  user.md
src/influence_trader/pipeline/: __init__.py  service.py
src/influence_trader/scraper/: __init__.py  filtering.py  service.py  twscrape_compat.py
tests/: test_market_impact_prompt_renderer.py  test_prompt_eval_assets.py  test_settings.py  test_tweet_relevance_filter.py
tests/evals/: README.md
tests/evals/market_impact/v1/: cases.json  rubric.md
tests/evals/semantic_relevance/v1/: cases.json  rubric.md
