[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
  "src/influence_trader/llm/prompt_assets/**/*.md",
  "src/influence_trader/llm/prompt_assets/**/*.json",
]

[project]
name = "influence-trader"
version = "0.1.0"
description = "Real-time market influence monitoring from high-impact public tweets."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
  "apscheduler>=3.11.0,<4.0.0",
  "fastapi>=0.135.3,<0.136.0",
  "httpx>=0.28.0,<1.0.0",
  "pydantic-settings>=2.10.0,<3.0.0",
  "twscrape>=0.17.0,<1.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/influence_trader"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[dependency-groups]
dev = [
    "pytest>=8.4.0,<9.0.0",
    "pytest-asyncio>=1.1.0,<2.0.0",
    "ruff>=0.12.0,<1.0.0",
    "mypy>=1.20.0",
    "pre-commit>=4.5.1",
]

[tool.mypy]
python_version = "3.11"
files = ["src", "tests"]
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
no_implicit_optional = true
pretty = true

[[tool.mypy.overrides]]
module = ["twscrape", "twscrape.xclid", "fastapi"]
ignore_missing_imports = true
